refactor: 공통 기물 생성 Board-> BoardSetUp