@@ -4,6 +4,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 import janggi.domain.piece.Direction;
 import janggi.domain.piece.Pattern;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.DisplayName;
@@ -19,8 +20,12 @@ class FixedPathStrategyTest {
                 Arguments.of(
                         new Pattern(List.of(Direction.NORTH, Direction.EAST, Direction.NORTH_EAST)),
                         new Point(7, 0),
-                        List.of(new Point(8, 0), new Point(8, 1), new Point(9,2))
-                )
+                        List.of(new Point(8, 0), new Point(8, 1), new Point(9, 2))
+                ),
+                Arguments.of(
+                        new Pattern(List.of(Direction.NORTH)),
+                        new Point(9, 0),
+                        Collections.emptyList())
         );
     }
 
